# rules_jvm_external

./: .bazelignore  .bazelrc  .bazelversion  .gitattributes  .gitignore  .npmrc  .travis.yml  AUTHORS  BOM_RESOLUTIONS.md  BUILD  CODEOWNERS  CONTRIBUTING.md  GMavenToBazel.java  MODULE.bazel  README.md  RELEASING.md  WORKSPACE  WORKSPACE.bzl  WORKSPACE.bzlmod  coursier.bzl  defs.bzl  generate_docs.sh  gmaven.bzl  gradle.BUILD.bazel  import_external.bzl  kt_defs.bzl  license_classifier.bzl  maven-lock-file.json  maven_install.json  maven_rules.bzl  mvn.bzl  non-module-deps.bzl  package.json  pnpm-lock.yaml  policy_pinned_testing_install.json  pom.xml  regression_testing.json  regression_testing_install.json  repositories.bzl  rules_jvm_external_deps_install.json  (+9 more)
examples/android_instrumentation_test/: .bazelrc  .bazelrc-new  BUILD  BUILD.bazel  README.md  WORKSPACE
examples/android_instrumentation_test/src/main/: BUILD
examples/android_instrumentation_test/src/main/java/com/example/bazel/: BUILD  Greeter.java  MainActivity.java
examples/android_instrumentation_test/src/test/: AndroidManifest.xml  BUILD
examples/android_instrumentation_test/src/test/java/com/example/bazel/: BUILD  GreeterTest.java
examples/android_kotlin_app/: AndroidManifest.xml  BUILD  MODULE.bazel  WORKSPACE  maven_install.json
examples/android_kotlin_app/src/: BUILD
examples/android_kotlin_app/src/java/com/example/bazel/: MainActivity.kt
examples/android_kotlin_app/src/res/values/: styles.xml
examples/android_local_test/: .bazelrc  MODULE.bazel  README.md  WORKSPACE  maven_install.json
examples/android_local_test/bazel/robolectric/: BUILD  gen_deps.py
examples/android_local_test/src/main/: BUILD
examples/android_local_test/src/main/java/com/example/bazel/: MainActivity.java
examples/android_local_test/src/test/: AndroidManifest.xml  BUILD
examples/android_local_test/src/test/java/com/example/bazel/: MainActivityTest.java
examples/bzlmod/: .bazelrc  .bazelrc.example  .bazelversion  MODULE.bazel  WORKSPACE  alternative_maven_install.json  maven_install.json
examples/java-export/: .bazelrc  BUILD  MODULE.bazel  WORKSPACE  maven_install.json
examples/java-export/src/main/proto/: BUILD
examples/kt_android_local_test/: MODULE.bazel  README.md  WORKSPACE  maven_install.json
examples/kt_android_local_test/src/main/: BUILD
examples/kt_android_local_test/src/test/: BUILD
examples/pom_file_generation/: .bazelrc  BUILD  MODULE.bazel  README.md  WORKSPACE  maven_install.json  pom_template.xml
examples/scala_akka/: .bazelrc  .gitignore  BUILD  BUILD.bazel  MODULE.bazel  WORKSPACE  maven_install.json
examples/scala_akka/src/main/scala/hello/: Server.scala
examples/scala_akka/src/test/scala/hello/: ConfigurationSpec.scala  EndpointSpec.scala
examples/simple/: .bazelrc  BUILD  MODULE.bazel  WORKSPACE  maven_install.json  pinned_maven_install.json
examples/spring_boot/: BUILD  MODULE.bazel  README.md  WORKSPACE  maven_install.json  pom.xml
examples/spring_boot/src/main/java/hello/: Application.java  BUILD  BUILD.bazel  HelloController.java
examples/spring_boot/src/test/java/hello/: BUILD  BUILD.bazel  HelloControllerIT.java  HelloControllerTest.java
private/tools/java/com/github/bazelbuild/rules_jvm_external/junit5/: ActualRunner.java  BUILD.bazel  BaseResult.java  BazelJUnitOutputListener.java  CommandLineSummary.java  EntryDetails.java  JUnit5Runner.java  PatternFilter.java  RootContainer.java  RunsTest.java  TestResult.java  TestRunningSecurityManager.java  TestSuiteResult.java
private/windows/: BUILD.bazel  bat_binary.bzl  runfiles.bat
private/windows/private/: bat_launcher.bat  bat_launcher_maker.bat  utils.bzl
tests/com/github/bazelbuild/rules_jvm_external/junit5/: BUILD.bazel  CallingSystemExitTest.java  FilteringTest.java  HangingThreadTest.java  JUnit4CompatibilityTest.java  TestRunningSecurityManagerTest.java
tests/com/github/bazelbuild/rules_jvm_external/resolver/: ArtifactsHashTest.java  BUILD  BUILD.bazel  GradleResolverTest.java  MavenRepo.java  MavenResolverTest.java  PathHandler.java  ResolutionRequestTest.java  ResolverTestBase.java
tests/com/github/bazelbuild/rules_jvm_external/resolver/bom/: BUILD  BomResolverTest.java
tests/com/github/bazelbuild/rules_jvm_external/resolver/cmd/: BUILD  ResolverConfigTest.java
tests/com/github/bazelbuild/rules_jvm_external/resolver/gradle/: BUILD  BUILD.bazel  GradleBuildScriptGeneratorTest.java  GradleBuildScriptGeneratorTestFixturesTest.java  GradleBuildScriptTemplateTest.java  GradleModuleMetadataHelper.java  GradleResolvedDependencyImplTest.java  GradleResolverTest.java
tests/com/github/bazelbuild/rules_jvm_external/resolver/gradle/fixtures/: BUILD  BUILD.bazel
tests/com/github/bazelbuild/rules_jvm_external/resolver/gradle/testdata/: BUILD.bazel  boms_expected_build_gradle.kts  multipleRepositories_expected_build_gradle.kts  simple_expected_build.gradle.kts  simple_expected_build_gradle.kts
tests/com/github/bazelbuild/rules_jvm_external/resolver/lockfile/: BUILD  DependencyIndexTest.java  LockFileConverterTest.java  V2LockFileTest.java  V3LockFileTest.java  unsorted.json
tests/com/github/bazelbuild/rules_jvm_external/resolver/maven/: BUILD  DownloaderTest.java  ErrorReportingListenerTest.java
tests/integration/amend_artifact_test/: BUILD  MODULE.bazel  verify.sh
tests/integration/maven_bom/: BUILD  BUILD.bazel  OneDep.java  TransitiveDep.java  TwoDeps.java  bom-dependencies.golden.xml  bom.golden.xml  exclusion-bom-dependencies.golden.xml  exclusion-bom.golden.xml  java-export-exclusion-bom-dependencies.golden.xml  java-export-exclusion-bom.golden.xml  one-dep.golden.xml  substitution-bom-dependencies.golden.xml  transitive-bom-dependencies.golden.xml  two-deps.golden.xml  versioned-transitive-bom-dependencies.golden.xml  versioned-transitive-bom.golden.xml
tests/integration/plugin_targets/: BUILD  BUILD.bazel  ClassUsingAnnotationProcessor.java  ClassUsingClassUsingAnnotationProcessor.java  ClassUsingTestOnlyAnnotationProcessor.java
tests/integration/root_wins_layer/: MODULE.bazel
(+471 files in other folders)
