module(
    name = "rules_jvm_external",
    version = "5.3",
)

bazel_dep(name = "bazel_skylib", version = "1.4.1")
bazel_dep(name = "stardoc", repo_name = "io_bazel_stardoc", version = "0.5.3")

non_module_deps = use_extension("//:non-module-deps.bzl", "non_module_deps")

use_repo(
    non_module_deps,
    "io_bazel_rules_kotlin",
)

maven = use_extension(":extensions.bzl", "maven")

maven.install(
    name = "rules_jvm_external_deps",
    artifacts = [
        "com.google.auth:google-auth-library-credentials:1.17.0",
        "com.google.auth:google-auth-library-oauth2-http:1.17.0",
        "com.google.cloud:google-cloud-core:2.18.1",
        "com.google.cloud:google-cloud-storage:2.22.3",
        "com.google.code.gson:gson:2.10.1",
        "com.google.googlejavaformat:google-java-format:1.17.0",
        "com.google.guava:guava:32.0.0-jre",
        "org.apache.maven:maven-artifact:3.9.2",
        "software.amazon.awssdk:s3:2.20.78",
    ],
    lock_file = "@rules_jvm_external//:rules_jvm_external_deps_install.json",
)

use_repo(
    maven,
    "rules_jvm_external_deps",
)
