module(
    name = "rules_jvm_external",
    version = "5.3",
)

bazel_dep(name = "rules_android", version = "0.1.1", dev_dependency = True)
bazel_dep(name = "bazel_skylib", version = "1.4.2")
bazel_dep(name = "rules_kotlin", version = "1.9.0")
bazel_dep(name = "stardoc", repo_name = "io_bazel_stardoc", version = "0.5.3")

maven = use_extension(":extensions.bzl", "maven")

maven.install(
    name = "rules_jvm_external_deps",
    artifacts = [
        "com.google.auth:google-auth-library-credentials:1.19.0",
        "com.google.auth:google-auth-library-oauth2-http:1.19.0",
        "com.google.cloud:google-cloud-core:2.22.0",
        "com.google.cloud:google-cloud-storage:2.26.1",
        "com.google.code.gson:gson:2.10.1",
        "com.google.googlejavaformat:google-java-format:1.17.0",
        "com.google.guava:guava:32.1.2-jre",
        "org.apache.maven:maven-artifact:3.9.4",
        "software.amazon.awssdk:s3:2.20.128",
    ],
    lock_file = "@rules_jvm_external//:rules_jvm_external_deps_install.json",
)

use_repo(
    maven,
    "rules_jvm_external_deps",
)
