# Platform configuration.
platform(
    name = "android_platform",
    constraint_values = [
        "@bazel_tools//platforms:x86_64",
        "@bazel_tools//platforms:linux",
        "@bazel_toolchains//constraints:xenial",
        "@bazel_tools//tools/cpp:clang",
    ],
    # TODO(@jin): s/di-cloud-exp/rbe-containers/ when the official android-test container with libxcursor1 and libxcomposite1 is ready.
    # URI for official container: docker://gcr.io/rbe-containers/ubuntu16_04-android_test@sha256:<sha256>
    remote_execution_properties = """
properties: {
name: "container-image"
value: "docker://gcr.io/di-cloud-exp/rbe-ubuntu16-04-android@sha256:8511fb519f9c0c8307979450b0d8b0e5c972fead9c5718ddb788817a2e551173"
}
properties: {
name: "dockerNetwork"
value: "standard"
}
properties: {
name: "dockerPrivileged"
value: "true"
}
""",
)
