module(name = "rules_jvm_external_example_java_export")

protobuf_version = "35.0"

bazel_dep(name = "protobuf", version = protobuf_version)
bazel_dep(name = "rules_jvm_external", version = "ignored")
bazel_dep(name = "rules_proto", version = "7.1.0")

local_path_override(
    module_name = "rules_jvm_external",
    path = "../../",
)

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "com.google.code.gson:gson:2.14.0",
        "com.google.errorprone:error_prone_annotations:2.49.0",
        "com.google.guava:guava:33.6.0-jre",
        "com.google.j2objc:j2objc-annotations:3.1",
        "com.google.protobuf:protobuf-java:4.%s" % protobuf_version,
    ],
    fetch_sources = True,
    known_contributing_modules = ["protobuf"],
    lock_file = "//:maven_install.json",
)
use_repo(maven, "maven")
