module(
    name = "kt_android_local_test_example",
    version = "0.0.0",
)

bazel_dep(name = "rules_kotlin", version = "2.2.2")
bazel_dep(name = "rules_android", version = "0.7.1")
bazel_dep(name = "rules_robolectric", version = "4.16.1")
bazel_dep(name = "rules_jvm_external", version = "0.0.0")
bazel_dep(name = "rules_java", version = "9.3.0")

local_path_override(
    module_name = "rules_jvm_external",
    path = "../..",
)

# Android SDK and tools
remote_android_extensions = use_extension("@bazel_tools//tools/android:android_extensions.bzl", "remote_android_tools_extensions")
use_repo(remote_android_extensions, "android_gmaven_r8", "android_tools")

android_sdk_repository_extension = use_extension("@rules_android//rules/android_sdk_repository:rule.bzl", "android_sdk_repository_extension")
use_repo(android_sdk_repository_extension, "androidsdk")

register_toolchains("@androidsdk//:sdk-toolchain", "@androidsdk//:all")

# Maven dependencies
maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "androidx.appcompat:appcompat:1.7.1",
        "androidx.annotation:annotation:1.10.0",
        "androidx.emoji2:emoji2:1.6.0",
        "androidx.emoji2:emoji2-views-helper:1.6.0",
        "androidx.lifecycle:lifecycle-common:2.10.0",
        "androidx.lifecycle:lifecycle-livedata-core:2.10.0",
        "androidx.lifecycle:lifecycle-runtime:2.10.0",
        "androidx.lifecycle:lifecycle-viewmodel-savedstate:2.10.0",
        "androidx.savedstate:savedstate:1.5.0",
        "androidx.test.ext:junit:1.3.0",
        "com.google.code.gson:gson:2.14.0",
        "com.google.errorprone:error_prone_annotations:2.49.0",
        "com.google.guava:guava:33.6.0-jre",
        "com.google.j2objc:j2objc-annotations:3.1",
        "junit:junit:4.13.2",
        "org.robolectric:robolectric:4.16.1",
        "org.assertj:assertj-core:3.27.7",
    ],
    known_contributing_modules = ["protobuf"],
    lock_file = "//:maven_install.json",
    repositories = [
        "https://maven.google.com",
        "https://repo1.maven.org/maven2",
    ],
    version_conflict_policy = "pinned",
)
use_repo(maven, "maven")
